testCases/blocks-error/blocks-error.err
data/blocks-error.cpp:5:9: warning: the value of variable 'int y' is never used
    int y = 20;
        ^
data/blocks-error.cpp:7:7: error: 'y' was not declared in this scope
  x = y;
      ^
data/blocks-error.cpp:3:7: warning: the value of variable 'int x' is never used
  int x = 10;
      ^
